2008-05-07  Lapo Calamandrei <calamandrei@gmail.com>

	*24x24/categories/preferences-desktop-peripherals.png: correct the
	size. Fixes bug #531366

2008-05-05  Jakub Steiner <jimmac@ximian.com>

	* 24x24/apps/system-software-installer.png: prevent upscaling 
	  a wrong size. Fixes bug #110367

2008-04-19  Rodney Dawes  <dobey.pwns@gmail.com>

	* 48x48/apps/Makefile.am:
	* 48x48/apps/gnome-grecord.*:
	Remove the old gnome-grecord icon

	Fixes #526933

2008-04-19  Rodney Dawes  <dobey.pwns@gmail.com>

	* configure.in:
	Don't hardcode the path to true as /bin/true

	Fixes #525988

2008-04-12  Rodney Dawes  <dobey.pwns@gmail.com>

	* */stock/io/Makefile.am:
	* */stock/io/stock_bluetooth.*:
	Remove stock_bluetooth

2008-03-30  Rodney Dawes  <dobey.pwns@gmail.com>

	* configure.in: Up version to 2.23.0 for development series
	Add check to determine whether we are building a stable or dev build
	Disable the use and requirement of icon-naming-utils for dev builds

2008-03-11  Rodney Dawes  <dobey.pwns@gmail.com>

	* configure.in: Up version to 2.22.0 for release

2008-02-24  Rodney Dawes  <dobey.pwns@gmail.com>

	* configure.in: Up version to 2.21.92 for release

2008-02-02  Lapo Calamandrei <calamandrei@gmail.com>

	* New paper sheet in ALL icons with it... (Fixes #453642).

2008-01-30  Lapo Calamandrei <calamandrei@gmail.com>

	* 16x16/actions/window-close.* : smaller.

2008-01-04  Lapo Calamandrei <calamandrei@gmail.com>

	* Changed */actions/zoom-best-fit.* to */actions/zoom-fit-best.*
		as in the latest naming spec revision.

2008-01-02  Lapo Calamandrei <calamandrei@gmail.com>

	* Yet another new year.
	* {32x32,scalable}/emotes/face-worried.* : added.

2007-12-31  Lapo Calamandrei <calamandrei@gmail.com>

	* {16x16,32x32,scalable}/emotes/face-tired.* : added.

2007-12-30  Lapo Calamandrei <calamandrei@gmail.com>

	* 22x22/emotes/face-tired.* : added.
	* {16x16,22x22}/emotes/face-worried.* : added.
	* */emotes/face-sick.* : added.