@@ -30,7 +30,7 @@ icons_DATA =				\
 	preferences-desktop-wallpaper.svg	\
 	preferences-system-windows.svg	\
 	system-file-manager.svg		\
-	system-software-installer.svg	\
+	system-software-install.svg	\
 	system-software-update.svg	\
 	system-users.svg		\
 	user-info.svg	\
