@@ -1,7 +1,9 @@
 2008-05-07  Lapo Calamandrei <calamandrei@gmail.com>
 
-	*24x24/categories/preferences-desktop-peripherals.png: correct the
-	size. Fixes bug #531366
+	* Renamed system-software-installer to system-software-install as for
+	  latest naming specs additions.
+	* 24x24/categories/preferences-desktop-peripherals.png: correct the
+	  size. Fixes bug #531366
 
 2008-05-05  Jakub Steiner <jimmac@ximian.com>
 
